2007-05-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: allows to specify URLs as patch location
	(closes: #435918).

2007-05-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py: adds support for autoreconf, patch by
	Guillaume Desmottes from Sugar (closes: #435772).

2007-05-03  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: also look for patches in moduleset
	directory + /patches/; requested for sugar.

2007-05-03  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/checkbranches.py: added command to check GNOME
	module sets for missing branches definitions (limited to GNOME at
	the moment since it uses the ViewCVS interface).

2007-05-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: branched gnome-menus, gnome-panel,
	gnome-desktop, gnome-session, libwnck, libgtop, gnome-python,
	gnome-volume-manager, deskbar-applet, fast-user-switch-applet and
	libgtop for GNOME 2.18.

2007-05-01  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-suites-2.20.modules: bug-buddy depends on
	gnome-desktop

2007-04-29  Lucas Rocha  <lucasr@gnome.org>

	* modulesets/gnome-2.18.modules: Use gnome-2-18 branch
	for zenity.

2007-04-28  Olav Vitters  <olav@bkor.dhs.org>

	* jhbuild/defaults.jhbuildrc: Change default moduleset from GNOME 2.16
	to 2.20

2007-04-24  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-external-deps-2.20.modules: Use
	libgpg-error-1.4 to fix seahorse build on fedora rawhide.

2007-04-24  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.20.modules: atk now depends
	on gnome-doc-utils.

2007-04-23  William Jon McCann  <mccann@jhu.edu>

	* modulesets/gnome-2.18.modules: Use gnome-2-18 branch for
	gnome-screensaver and nautilus-cd-burner.

2007-04-22  Murray Cumming  <murrayc@murrayc-desktop>

	* modulesets/gnome-2.20.modules: Added libgnomedbmm and libgdamm trunk.

2007-04-22 Dodji Seketeli <dodji@gnome.org>
