@@ -1,5 +1,10 @@
 2007-05-04  Frederic Peters  <fpeters@0d.be>
 
+	* doc/jhbuild.xml: updating paragraphs about patches with recent
+	changes.
+
+2007-05-04  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/tarball.py: allows to specify URLs as patch location
 	(closes: #435918).
 
